Next release
============

Features
--------

- Add two new APIs to the ``repoze.bfg.configuration.Configurator``
  class: ``add_adapter`` and ``add_utility``.  These, respectively,
  perform the same functions as the ``registerAdapter`` and
  ``registerUtility`` functions of the configurator's underlying ZCA
  registry.  They were added to allow for a more consistent testing
  API for applications that make use of the ZCA directly.

- Add a ``custom_predicates`` argument to the ``Configurator``
  ``add_view`` method, the ``bfg_view`` decorator and the attribute
  list of the ZCML ``view`` directive.  If ``custom_predicates`` is
  specified, it must be a sequence of predicate callables (a predicate
  callable accepts two arguments: ``context`` and ``request`` and
  returns ``True`` or ``False``).  The associated view callable will
  only be invoked if all custom predicates return ``True``.  Use one
  or more custom predicates when no existing predefined predicate is
  useful.  Predefined and custom predicates can be mixed freely.

- Add a ``custom_predicates`` argument to the ``Configurator``
  ``add_route`` and the attribute list of the ZCML ``route``
  directive.  If ``custom_predicates`` is specified, it must be a
  sequence of predicate callables (a predicate callable accepts two
  arguments: ``context`` and ``request`` and returns ``True`` or
  ``False``).  The associated route will match will only be invoked if
  all custom predicates return ``True``, else route matching
  continues.  Note that the value ``context`` will always be ``None``
  when passed to a custom route predicate.  Use one or more custom
  predicates when no existing predefined predicate is useful.
  Predefined and custom predicates can be mixed freely.

Internal
--------

- Cause the ``adapter``, ``utility``, and ``subscriber`` ZCML
  directives to use a ``Configurator`` instance and associated
  configurator APIs rather than a ZCA registry directly.

1.2a6 (2009-12-18)
==================
